# sebi-circular-rag

./: .claudeignore  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  Makefile  README-spaces.md  README.md  SEBI_RAG_Claude_Desktop_Engineering_Handbook.md  app.py  config.toml  pyproject.toml  requirements-spaces.txt  run.sh  run_ops.sh
.claude/: settings.json
.codex/: hooks.json
.tokensave/: branch-meta.json  config.json  tokensave.db  tokensave.db-shm  tokensave.db-wal
data/: seen_circular_ids.txt
deploy/: com.sebi-rag-ops.plist  com.sebi-rag.plist
docs/: USAGE.md  adr-001-architecture-review-2026-07.md  adr-002-certainty-and-advisory.md  adr-003-ane-declined.md  n8n_automation_plan.md  next_steps.md  project_context.md  scraping_plan.md  status.md  validation_roadmap.md
eval/: bench_rerankers.json
graphify-out/: .gitignore  .graphify_chunk_01.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
reports/: 2026-07-23-regulation-cross-reference-results.md  ci_rescore.json  ci_rescore.md  master_coverage.json  master_coverage.md  reg_edge_audit.md  unresolved_regulations.txt
scripts/: acquire_missing_pdfs.py  audit_reg_edges.py  bench_generators.py  bench_rerankers.py  bench_retrieval.py  build_golden.py  build_golden_v6.py  build_index.py  build_reg_edges.py  build_splade_index.py  calibrate.py  canary.sh  deploy_space.py  discover.sh  discover_new.py  eval_asof.py  eval_gate.py  eval_json.py  export_benchmark.py  export_datasets.py  generate_context_headers.py  notify.sh  ops_server.py  push_datasets.py  refresh.sh  renumber.py  (+8 more)
(+279 files in other folders)
